archive/consul/server/helm/example/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: consul-route
  namespace: consul
spec:
  parentRefs:
    - name: cilium-gateway
      sectionName: http # 对应 Gateway 的监听器名称
      namespace: default
  hostnames:
    - "consul.app.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: consul-expose-servers
          port: 8500
